force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop__c/Plant_Shop__c.object-meta.xml
<CustomObject>
    <label>Plant Shop</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Shops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>