force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop__c/fields/Auth_Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_Plant_Name__c</fullName>
    <label>Auth Plant Name</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Plant Shops</relationshipLabel>
    <relationshipName>Plant_Shops</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>