force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop__c/fields/Selected_Programs__c.field-meta.xml
<CustomField>
    <fullName>Selected_Programs__c</fullName>
    <label>Selected Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program_Product_Index</valueSetName>
    </valueSet>
</CustomField>