force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop__c/fields/Shop_Master__c.field-meta.xml
<CustomField>
    <fullName>Shop_Master__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Shop Master</label>
    <referenceTo>Shop_Master__c</referenceTo>
    <relationshipLabel>Plant Shops</relationshipLabel>
    <relationshipName>Plant_Shops</relationshipName>
    <type>Lookup</type>
</CustomField>