force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Auth_Plant_Name__c</columns>
    <columns>Auth_Sector__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Shop__c</columns>
    <columns>Selected_Programs__c</columns>
    <columns>Active__c</columns>
    <columns>Shop_Master__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>